Fix overflows and make menu smaller

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 .App {
   display: grid;
   grid-template-columns: auto 1fr;
+  overflow: hidden;
   background-color: #292929;
   color: #f7f7f7;
   font-family: 'Helvetica Neue', 'Work Sans', sans-serif;
