--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -1,7 +1,7 @@
 .Sidebar {
   display: grid;
   grid-template-rows: auto auto 1fr auto;
-  width: 574px;
+  width: 450px;
   height: 100vh;
   background-color: #000;
 
