--- a/src/wallets/Wallets.scss
+++ b/src/wallets/Wallets.scss
@@ -42,6 +42,7 @@
     display: grid;
     grid-template-rows: auto 1fr;
     height: 100vh;
+    overflow: auto;
 
     .details {
       overflow: auto;
